--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Segoe UI', sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 header {
     width: 100%;
@@ -24,6 +28,7 @@ h2 {
     font-size: 2em;
 }
 nav {
+    width: 100%;
     margin: 20px 0;
     padding: 10px;
     display: flex;
@@ -47,6 +52,19 @@ nav .active {
     color: #ffffff;
 }
 nav button:active {
-    background: #35424a;
+    background: #35424ac2;
     color: #ffffff;
+}
+main {
+    width: 80%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+}
+main .imageContainer {
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px #35424aab;
 }
